--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "hero",
+  "name": "apiai-skype-bot",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": ""
+  "keywords": [],
+  "engines": {
+    "node": ">=5.6.0"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "apiai": "^2.0.5",
     "body-parser": "^1.15.1",
+    "botbuilder": "^3.1.1",
+    "console-stamp": "^0.2.2",
     "express": "^4.13.4",
-    "request": "^2.72.0",
-    "uuid": "^2.0.3",
-    "xlsx-to-json-lc": "0.2.5"
+    "node-uuid": "^1.4.7"
   }
 }
