--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "botbuilder": "^3.1.1",
     "console-stamp": "^0.2.2",
     "express": "^4.13.4",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "xlsx-to-json-lc": "^0.2.5"
   }
 }
