--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "license": "Apache-2.0",
   "dependencies": {
     "apiai": "^2.0.5",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.15.1",
     "botbuilder": "^3.1.1",
     "console-stamp": "^0.2.2",
     "express": "^4.13.4",
     "node-uuid": "^1.4.7",
     "pg": "6.2.3",
+    "pg-promise": "^5.8.1",
     "xlsx-to-json-lc": "^0.2.5"
   }
 }
