--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: Il n'y a pas de test\" && exit 1",
     "start": "node app.js"
   },
   "keywords": [],
