--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bluebird": "3.5.0",
     "body-parser": "1.17.2",
     "botbuilder": "3.8.4",
+    "char": "1.0.2",
     "console-stamp": "0.2.5",
     "express": "4.15.3",
     "node-uuid": "1.4.8",
