--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "4.15.3",
     "node-uuid": "1.4.8",
     "pg": "6.2.4",
-    "pg-promise": "5.9.3"
+    "pg-promise": "5.9.3",
+    "string": "^3.3.3"
   }
 }
