--- a/package.json
+++ b/package.json
@@ -14,16 +14,14 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "apiai": "4.0.2",
+    "apiai": "2.0.5",
     "bluebird": "3.5.0",
-    "body-parser": "1.17.2",
-    "botbuilder": "3.8.4",
-    "char": "1.0.2",
-    "console-stamp": "0.2.5",
-    "express": "4.15.3",
-    "node-uuid": "1.4.8",
-    "pg": "6.2.4",
-    "pg-promise": "5.9.3",
-    "string": "^3.3.3"
+    "body-parser": "1.15.1",
+    "botbuilder": "3.1.1",
+    "console-stamp": "0.2.2",
+    "express": "4.13.4",
+    "node-uuid": "1.4.7",
+    "pg": "6.2.3",
+    "pg-promise": "5.8.1"
   }
 }
